--- a/style.css
+++ b/style.css
@@ -62,6 +62,42 @@ main {
   color: #c7365f;
   margin-bottom: auto;
 }
+.progressbar {
+  width: 15%;
+  height: 100%;
+  display: flex;
+  align-items: flex-end;
+}
+.progress {
+  width: 100%;
+  background-color: #f47c7c;
+  height: 0%;
+  transition: height 0.7s ease-in-out;
+}
+
+@keyframes wave {
+  0%,
+  100% {
+    height: 2%; /* Set the minimum height of the wave */
+  }
+  50% {
+    height: 5%; /* Set the maximum height of the wave */
+  }
+}
+#progress-bar-0 {
+  width: 15%;
+  height: 0%;
+  position: absolute;
+  left: 0;
+}
+
+#progress-bar-1 {
+  width: 14%;
+  height: 0%;
+  position: absolute;
+  right: 0;
+  z-index: -5;
+}
 
 .player--active {
   background-color: rgba(255, 255, 255, 0.4);
