--- a/style.css
+++ b/style.css
@@ -195,3 +195,12 @@ main {
   font-weight: 700;
   color: #c7365f;
 }
+
+#winnerAnnouncement0{
+  color:white;
+  margin-bottom: 20px;
+}
+#winnerAnnouncement1{
+  color:white;
+  margin-bottom: 20px;
+}
